<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="op40_toolchangeover" Id="{84d6a5e6-ae50-4162-a93f-5feb96136ee7}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM op40_toolchangeover
VAR
	op40_tool_change                    : tool_changeover;
	OP40_TOOL_CHANGE_MODE_SELECTED      : bool;
	fb_reset_1                          : BOOL;
	tool_6_fb                           : BOOL;
	tool_8_fb                           : BOOL;
	OP40_TOL_UNLOD_STRT					: BOOL;
	OP40_TOL_LOAD_STRT					: BOOL;
	OP40_TOL_DISENGAGE					: BOOL;
	OP40_TOL_ENGAGE						: BOOL;
	op40_manual_lock                    : BOOL;
	op40_manual_unlock                  : BOOL;
	OP40_UNLD_STUS                      : STRING;
	OP40_LOAD_STUS                      : STRING;
END_VAR

VAR PERSISTENT
	
	OP40_TOL_WRK_POS					: LREAL;
	OP40_TOL_HME_POS					: LREAL;
	op40_TOL_VELOCITY					: LREAL;
	OP40_TOL_CHNGE_CMPLE				: BOOL;
	OP40_TOL_LOAD_COMPLE                : BOOL;
	OP40_TOL_UNLOAD_COMPLE              : BOOL;
	
END_VAR	
	]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF OP40_TOOL_CHANGE_MODE_SELECTED THEN

op40_tool_change(
	actual_pos:=SR40_Vert_servo_ctrl.Actual_Position,
	actual_vel:=SR40_Vert_servo_ctrl.Actual_Velocity,
	target_work_pos:= OP40_TOL_WRK_POS, 
	target_home_pos:= OP40_TOL_HME_POS, 
	target_vel_from_hmi:= op40_TOL_VELOCITY, 
	station_number:= , 
	mover_number:= , 
	no_of_mover_present:= , 
	model_selected:= model_selected, 
	tool_unloading_start:=OP40_TOL_UNLOD_STRT , 
	tool_loading_start:=OP40_TOL_LOAD_STRT , 
	error_active:= , 
	station_in_auto:= OP40_AutoSelected, 
	station_in_home:=  , 
	absoulte_move_done:= SR40_Vert_servo_ctrl.Axis_In_Pos, 
	tool_6_3_present:= tool_6_fb, 
	tool_7_89_present:= tool_8_fb, 
	fb_reset:=fb_reset_1,
	SERVO_TOL_CHECK_OFFSET_POS := 18, 
	tool_changer_over_complete=> OP40_TOL_CHNGE_CMPLE,
	tool_disengage=> OP40_TOL_DISENGAGE, 
	tool_engagae=> OP40_TOL_ENGAGE, 
	tool_loading_complete=> OP40_TOL_LOAD_COMPLE, 
	tool_unloading_complete=> OP40_TOL_UNLOAD_COMPLE, 
	servo_move_abs=>SR40_Vert_servo_ctrl.ABSmove_Start, 
	unloading_status=>OP40_UNLD_STUS , 
	loading_status=>OP40_LOAD_STUS , 
	target_pos_to_servo=> SR40_Vert_servo_ctrl.Position, 
	target_vel_to_servo=> SR40_Vert_servo_ctrl.Velocity,
    tool_loading_failed := );
	
END_IF	

IF op40_manual_lock OR OP40_TOL_ENGAGE THEN
	O40_TOOL_CHO_UNLOCK_Q1151_0     :=0;
	O40_TOOL_CHO_LOCK_Q1151_1       :=1;
ELSIF op40_manual_unlock OR OP40_TOL_DISENGAGE THEN
	 O40_TOOL_CHO_UNLOCK_Q1151_0     :=1;
	 O40_TOOL_CHO_LOCK_Q1151_1       :=0;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="op40_toolchangeover">
      <LineId Id="39" Count="31" />
      <LineId Id="5" Count="0" />
      <LineId Id="87" Count="1" />
      <LineId Id="117" Count="6" />
      <LineId Id="116" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>